# tostr

./: .clinerules  .gitignore  .tostrignore  ARCHITECTURE.md  README.md  conftest.py  fable_analysis.md  pyproject.toml  requirements.txt  tostr.lock.json
.claude/plans/: DEPENDENCY_RESOLUTION_INSIGHTS.md  EXPORT_LOCKFILE_DESIGN.md  INIT_PARSE_DESIGN.md  incremental-update-failproofing.md
.github/ISSUE_TEMPLATE/: dependency_resolver  task.md
.github/workflows/: publish.yml  tests.yml
.skills/: Creating_New_Language_Parser.md
.tostr/: cache.db  cache.db-shm  cache.db-wal  config.toml
src/tostr/: __init__.py  agents.py  cli.py  commands.py  exceptions.py  mcp.py  server.py
src/tostr/core/: __init__.py  builders.py  cache_version.py  constants.py  db.py  describer.py  lockfile.py  models.py  parser.py  providers.py  registry.py  resolver.py  serializer.py
src/tostr/core/context/: __init__.py  config.py
src/tostr/core/utils/: logger.py  progress.py
src/tostr/languages/: default.tostrignore
src/tostr/languages/html/: builders.py  language.py
src/tostr/languages/java/: __init__.py  builders.py  default.tostrignore  language.py  queries.py
src/tostr/languages/python/: __init__.py  builders.py  default.tostrignore  dependency_patterns.md  language.py  queries.py
src/tostr/llm/: __init__.py  base.py  gemini.py  prompts.py
src/tostr/semantic/embeddings/: __init__.py  base.py  local.py  onnx.py
src/tostr/semantic/llm/: __init__.py  base.py  gemini.py  ollama.py  prompts.py
src/tostr/templates/: __init__.py  agent_context.md
tests/: test_cache_version.py  test_guarded_write.py  test_watch_live_update.py
tests/core/: test_file_line_bounds.py  test_resolver.py  test_serializer_body.py
tests/core/context/: test_config.py
tests/languages/html/: test_html_file_builder.py
tests/languages/java/: test_java_dependencies.py
tests/languages/java/builder/: test_java_class_builder.py  test_java_field_builder.py  test_java_file_builder.py  test_java_method_builder.py
tests/languages/python/: test_python_dependencies.py
tests/languages/python/builder/: test_python_class_builder.py  test_python_field_builder.py  test_python_file_builder.py  test_python_method_builder.py
tests/llm/: test_describe_file_body.py  test_llm_client.py
tests/testcode/MRILib/.tostr/: cache.db
tests/testcode/PythonTestProject/: .gitignore
