[build-system]
# 1. Add setuptools_scm here so the build environment can use it
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tostr"
# 2. REMOVE version = "0.1.0" and declare it dynamic instead
dynamic = ["version"]
authors = [
    { name = "Avery Brown" }
]
description = "Token-Optimized Syntax Tree String IR Generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-java",
    "tree-sitter-c-sharp",
    "tree-sitter-python",
    "google-genai",
    "pydantic",
    "typer",
    "watchfiles",
    "loguru",
    "fastmcp",
    "pathspec",
    "sqlite-vec",
    "onnxruntime"
]

[project.scripts]
tostr = "tostr.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools_scm]

[tool.setuptools.package-data]
tostr = ["resources/models/all-MiniLM-L6-v2/*"]